namespaces/openshift-monitoring/route.openshift.io/routes/alertmanager-main.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2023-03-09T14:32:45Z"
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:path: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: operator
    operation: Update
    time: "2023-03-09T14:32:45Z"
  name: alertmanager-main
  namespace: openshift-monitoring
  resourceVersion: "15859"
  uid: 147ba5f4-2227-400e-8d2a-0c2d5bd47098
spec:
  host: alertmanager-main-openshift-monitoring.apps.ocp.choomba.one
  path: /api
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: alertmanager-main
    weight: 100
  wildcardPolicy: None
status: {}
