namespaces/openshift-monitoring/route.openshift.io/routes/prometheus-k8s-federate.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2023-03-09T14:32:46Z"
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    subresource: status
    time: "2023-03-09T14:32:46Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:path: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: operator
    operation: Update
    time: "2023-03-09T14:32:46Z"
  name: prometheus-k8s-federate
  namespace: openshift-monitoring
  resourceVersion: "15887"
  uid: ad3106cc-3e41-41a6-a83d-58425e7366fd
spec:
  host: prometheus-k8s-federate-openshift-monitoring.apps.ocp.choomba.one
  path: /federate
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-k8s
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2023-03-09T14:32:46Z"
      status: "True"
      type: Admitted
    host: prometheus-k8s-federate-openshift-monitoring.apps.ocp.choomba.one
    routerCanonicalHostname: router-default.apps.ocp.choomba.one
    routerName: default
    wildcardPolicy: None
