namespaces/openshift-monitoring/route.openshift.io/routes/prometheus-k8s.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2023-03-09T14:32:45Z"
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:path: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: operator
    operation: Update
    time: "2023-03-09T14:32:45Z"
  name: prometheus-k8s
  namespace: openshift-monitoring
  resourceVersion: "16998"
  uid: d308f944-7808-40b2-af24-355f8af904b6
spec:
  host: prometheus-k8s-openshift-monitoring.apps.ocp.choomba.one
  path: /api
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-k8s
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2023-03-09T14:32:45Z"
      status: "True"
      type: Admitted
    host: prometheus-k8s-openshift-monitoring.apps.ocp.choomba.one
    routerCanonicalHostname: router-default.apps.ocp.choomba.one
    routerName: default
    wildcardPolicy: None
